[metadata]
name = flickrhistory

version = attr: flickrhistory.__version__
license = GPLv3

description = Download a complete history of georeferenced flickr posts
long_description = file: README.md
url = https://gitlab.com/christoph.fink/flickrhistory/

author = Christoph Fink
author_email = christoph.fink@helsinki.fi

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    dunamai
    GeoAlchemy2
    psycopg2
    PyYAML
    requests
    SQLAlchemy

[options.data_files]
. = flickrhistory.yml.example
